...
              ),
              alignment: Alignment.center,
              child: Icon(Icons.mark_email_read_outlined, color: AppColors.primaryColor, size: 32),
            ),
            SizedBox(height: BaseSpacing.lg),
            CustomText(
              text: 'Verify your email',
              color: AppColors.black2,
              fontSize: AppFontSize.veryLarge,
              fontWeight: FontWeight.bold,
            ),
            SizedBox(height: BaseSpacing.xxs),
            CustomText(
...
